# ProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt
App/Source/: App.cpp  TestCommit.cpp  TestCommit.h
Core/: CMakeLists.txt
Core/Include/: Core.h
Core/Source/: Core.cpp  Core.h
